// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test functions > render 1`] = `"(...args) {"`;

exports[`test functions > render 2`] = `
"
			console.log(args);
			return "333";
		"
`;

exports[`test functions > render 3`] = `"(...args) {"`;

exports[`test functions > render 4`] = `
"
		console.log(args);
		return "111";
	"
`;

exports[`test functions > render 5`] = `"func2(...args) {"`;

exports[`test functions > render 6`] = `
"
		console.log(args);
		return "222";
	"
`;

exports[`test functions > render 7`] = `"(...args) => {"`;

exports[`test functions > render 8`] = `" console.log("555")"`;

exports[`test functions > render 9`] = `"(...args) => {"`;

exports[`test functions > render 10`] = `
" {
			console.log(args);
			return "666";
		}"
`;

exports[`test functions > render 11`] = `"(a, b) {"`;

exports[`test functions > render 12`] = `
"
			throw Error("Be careful to use the function just as value in useState() hook");
		"
`;

exports[`test functions > render 13`] = `"({ prop1, prop2, ...other }) => {"`;

exports[`test functions > render 14`] = `
" {
			console.log(prop1, prop2, other);
			return "777";
		}"
`;

exports[`test functions > render 15`] = `"({ prop1, prop2, ...other }) => {"`;

exports[`test functions > render 16`] = `
" {
			console.log(prop1, prop2, other);
			return "888";
		}"
`;

exports[`test functions > render 17`] = `"(e, n) {"`;

exports[`test functions > render 18`] = `
"
			return e + n;
		"
`;
